src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Borough__c</fullName>
        <label>Borough</label>
        <picklist>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manhattan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staten Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Code__c</fullName>
        <label>Budget Code</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEP_Court_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If user should appear on the list of court reps in the CEP Intake. This field may become redundant if all Court Staff are eventually supposed to all appear on both CEP and START intakes.</description>
        <inlineHelpText>If user should appear on the list of court reps in the CEP Intake, check this box</inlineHelpText>
        <label>CEP Court Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Coordinator_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the user a Case Coordinator?</description>
        <label>Case Coordinator Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Court_Team__c</fullName>
        <label>Court Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>This replaces native Department field as per Npower. QC renamed label from Department to CASES Department because difficult to distinguish unless using API name. Field name remains Department__c as originally by Npower.</description>
        <label>CASES Department</label>
        <picklist>
            <picklistValues>
                <fullName>BJC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCI START</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choices (Bronx)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choices (Manhattan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic Justice Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harlem Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justice Scholars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens Justice Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervised Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Document_Signature__c</fullName>
        <label>Document Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Edit_Program_Cycle_End_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Currently only relevant to SRP - only certain users (Nicole Zayas) can edit the End Date on Program Cycles when Record Type = SRP. Will work with validation rule.</description>
        <inlineHelpText>Currently only relevant to SRP - only certain users (Nicole Zayas) can edit the End Date on Program Cycles when Record Type = SRP. Will work with validation rule.</inlineHelpText>
        <label>Edit Program Cycle End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>START_Court_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If user should appear on the list of court reps in the START Intake. This field may become redundant if all Court Staff are eventually supposed to appear on both the CEP and START intakes.</description>
        <inlineHelpText>If user should appear on the list of court reps in the START Intake, check this box</inlineHelpText>
        <label>START Court Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sign_Court_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sign Court Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>To bad we can&apos;t scrap this and use CASES Department instead, sigh.</description>
        <inlineHelpText>Work Unit to which employ belongs.</inlineHelpText>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS - Ignore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Department__c</columns>
        <columns>Unit__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CEP_Court_Rep__c</columns>
        <columns>START_Court_Rep__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Unit__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>BJC_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Department__c</columns>
        <columns>Unit__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>BJC</value>
        </filters>
        <label>BJC Active Users</label>
    </listViews>
    <listViews>
        <fullName>InactiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Unit__c</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
    </listViews>
    <listViews>
        <fullName>Recently_Deactivated_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Department__c</columns>
        <columns>Unit__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Recently Deactivated Users</label>
    </listViews>
    <listViews>
        <fullName>START_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Department__c</columns>
        <columns>Unit__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>START</value>
        </filters>
        <label>START Active Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>